@@ -69,9 +69,9 @@ int	SYSTEM_CPU_UTIL(const char *cmd, const char *param, unsigned flags, AGENT_RE
 
 	if ('\0' == *tmp || 0 == strcmp(tmp, "user"))	/* default parameter */
 		state = ZBX_CPU_STATE_USER;
-	else if (0 == strcmp(tmp, "wait"))
+	else if (0 == strcmp(tmp, "iowait"))
 		state = ZBX_CPU_STATE_IOWAIT;
-	else if (0 == strcmp(tmp, "kernel"))
+	else if (0 == strcmp(tmp, "system"))
 		state = ZBX_CPU_STATE_SYSTEM;
 	else if (0 == strcmp(tmp, "idle"))
 		state = ZBX_CPU_STATE_IDLE;
